--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,10 +4,119 @@
     padding: 0;
 }
 
+:root{
+    --altoRegister: 500px;
+    --altoLogin: 300px;
+}
+
 body {
     background-color: #435165;
 }
+/*
+    ===========================
+            CAJA PRINCIPAL REGISTER.
+    ===========================
 
+*/
+#cajaRegister {
+    margin: auto;
+    width: 300px;
+
+}
+
+
+#cajaRegister p {
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    padding-bottom: 5px;
+}
+
+#cajaRegister p span {
+    font-weight: bold;
+}
+
+/*
+    ===========================
+        CAJA REGISTER
+    ===========================
+
+*/
+
+#cajaRegister form {
+    display: flex;
+    flex-wrap: wrap;
+
+
+    justify-content: center;
+    padding-top: 20px;
+
+    width: 400px;
+
+    height: var(--altoRegister);
+    background-color: white;
+
+}
+
+
+#cajaRegister form h2 {
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    border-bottom: 1px solid #dee0e4;
+}
+
+#cajaRegister form label {
+    display: flex;
+    float: left;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 24px;
+    background-color: #3274d6;
+    color: #ffffff;
+    margin-top: 15px;
+
+}
+
+#cajaRegister form input[type="password"], input[type="text"] {
+    float: right;
+
+    border: 2px solid #dee0e4;
+    padding-left: 3px;
+
+    width: 300px;
+    height: 20px;
+    margin-top: 15px;
+}
+
+#cajaRegister form input[type="submit"] {
+
+    cursor: pointer;
+    color: white;
+    width: 50%;
+
+    border: 0;
+    background-color: rgb(66, 131, 235);
+    position: relative;
+    bottom: 5px;
+}
+
+#cajaRegister form input[type="submit"]:hover {
+    color: white;
+    background-color: rgb(66, 131, 235);
+
+}
+
+/*
+    ============================
+            CAJAS LOGIN
+    ============================
+*/
+
+/*
+     CAJA PRINCIPAL LOGIN.
+*/
 #cajaPrincipal {
     margin: auto;
     width: 300px;
@@ -37,7 +146,7 @@ body {
     padding-top: 20px;
 
     width: 400px;
-    height: 200px;
+    height: var(--altoLogin);
     background-color: white;
 
 }
