--- a/css/estilo.css
+++ b/css/estilo.css
@@ -99,13 +99,21 @@ body {
     border: 0;
     background-color: rgb(66, 131, 235);
     position: relative;
-    bottom: 5px;
+    bottom: 30px;
+    left: 100px;
 }
 
 #cajaRegister form input[type="submit"]:hover {
     color: white;
-    background-color: rgb(66, 131, 235);
+    background-color: rgb(235, 170, 66);
 
+}
+
+#cajaRegister form span {
+    height: 20px;
+    position: relative;
+    top: 31px;
+    right: 90px;
 }
 
 /*
@@ -191,11 +199,17 @@ body {
     border: 0;
     background-color: rgb(66, 131, 235);
     position: relative;
-    bottom: 5px;
+    /*bottom: 30px;*/
 }
 
 #cajaLogin form input[type="submit"]:hover {
     color: white;
-    background-color: rgb(66, 131, 235);
+    background-color: rgb(235, 170, 66);
+}
 
+#cajaLogin form span {
+    height: 20px;
+    position: relative;
+    top: 31px;
+    right: 0px;
 }
