--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 * {
     margin: 0;
     padding: 0;
@@ -196,6 +197,7 @@ body {
     cursor: pointer;
     color: white;
     width: 50%;
+    height: 40px;
 
     border: 0;
     background-color: rgb(66, 131, 235);   
@@ -304,4 +306,24 @@ body {
     position: relative;
     top: 31px;
     right: 0px;
+}
+
+
+/**
+    ===============
+        ERRORES
+    ===============
+*/
+.isa_error {
+    margin-top: 10px;
+    padding: 0 15px 15px;
+    width: 400px;
+    color: #D8000C;
+    background-color: #FFD2D2;
+    border-radius: 0.5em;
+}
+.isa_error i {
+    padding: 10px 10px;
+    font-size:2em;
+    vertical-align:middle;
 }
